new index.html title

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>
+      Polysemy - from Ancient Greek πολύ- (polý-) 'many', and σῆμα (sêma) 'sign'
+      is the capacity for a sign (e.g. a symbol, a morpheme, a word, or a
+      phrase) to have multiple related meanings.
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
